--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,14 +1,22 @@
+/*
+ *  Styles for footer
+ */
+
+/* Making a grid system in footer */
 footer {
     grid-row-start: 2;
     z-index: 2;
 }
+/* Contains links */
 .footer_links_container {
 
 }
+/* Directly links */
 .footer_links {
     width: 100%;
     height: 40px;
 }
+/* Centering links */
 .footer_links > a {
     text-align: center;
     margin-top: 10px;
