--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,8 @@
+/*
+ *  Styles for the header of all pages
+ */
+
+/* Header */
 .header {
     width: 100%;
     display: grid;
@@ -5,17 +10,16 @@
     /*grid-template-rows: ;*/
     z-index: 2;
 }
+/* container with nav in <header> */
 .nav_container {
     grid-column-start: 2;
     display: grid;
     grid-template-columns: 100%;
 }
+/* directly <nav> */
 .nav {
     width: 100%;
     padding: 0 10px 0 10px;
-    /*display: flex;
-    justify-content: space-around;
-    */
     display: grid;
     grid-template-columns: 45% 1fr 45%;
 
@@ -23,7 +27,8 @@
     border-bottom: 1px solid #57AB60;
     border-radius: 0 0 22px 22px;
     font-size: 18px;
-}/* блок навигации */
+}
+/* container with list of links */
 .nav_links {
     height: 31px;
     display: flex;
@@ -32,35 +37,29 @@
     max-width: 390px;
     width: 100%;
     align-items: center;
-}/* блок с ссылками */
+}
 .nav_links > ul {
     width: 100%;
     height: 100%;
     list-style: none;
     padding: 0;
 }
+/* logo container */
 .nav_logo {
     text-align: center;
 }
 .nav_logo > img {
     width: 45px;
 }
+/* Animation for links */
 .nav_links > a:hover {
     transition: 0.1s;
     border-bottom: white 3px solid;
 }
-.nav_theme_button {
-    padding: 0;
-    width: 34px;
-    height: 32px;
-    background: none;
-    border:none;
-}/* кнопка для смены темы */
-
-/**/
 .nav_links > ul > li > ul {
     padding: 0;
 }
+/* Hamburger-menu */
 .hamburger_container {
     display: none;
     margin-top: 6px;
@@ -68,6 +67,14 @@
 .hamburger {
     background: none;
     border: none;
+}
+/* In development */
+.nav_theme_button {
+    padding: 0;
+    width: 34px;
+    height: 32px;
+    background: none;
+    border:none;
 }
 #menu_item_categories:hover {
 
@@ -109,32 +116,34 @@
     background: white;
     */
 }
-/**/
 
-/*  */
+/* Media for screens with width > 1280px */
 @media (min-width: 1280px) {
+    /* Hide hamburger */
     .hamburger_container {
         display: none;
     }
 }
-/*  */
-/*  */
+
+/* Media for laptops */
 @media (max-width: 1280px) and (min-width: 769px) {
+    /* Hide hamburger */
     .hamburger_container {
         display: none;
     }
-    main {
-    }
+    /* Remove unnecessary padding */
     .nav_links {
         padding: 0;
     }
 }
-/*  */
-/*  */
+
+/* Media for tablets*/
 @media (max-width: 768px) and (min-width: 720px) {
+    /* Show hamburger */
     .hamburger_container {
         display: block!important;
     }
+    /* Replace Logo to the right */
     .nav_logo {
         grid-column-start: 3!important;
         justify-content: right!important;
@@ -142,10 +151,10 @@
         text-align: right!important;
     }
 }
-/*  */
 
-/*  */
+/* Media for small tablets and mobiles */
 @media (max-width: 720px) and (min-width: 320px) {
+    /* Replace Logo to the right */
     .nav_logo {
         grid-column-start: 3!important;
         display: flex;
@@ -156,25 +165,28 @@
         display: block;
         margin: 0 5px 0 5px;
     }
+    /* Rework navigation's grid */
     .nav_container {
         grid-template-columns: 1fr;
     }
     .nav {
         width: inherit;
     }
+    /* Rework banner from circle to square */
     .main_banner {
         max-width: 338px !important;
         width: 100% !important;
     }
+    .main_banner_container {
+        width: 300px!important;
+    }
+    /* Text should be smaller */
     .main_banner > p {
         font-size: 18px;
         line-height: 32px;
     }
-    .main_banner_container {
-        width: 300px!important;
-    }
+    /* Remove footer from the page */
     footer {
         display: none!important;
     }
 }
-/*  */
