--- a/styles/style.css
+++ b/styles/style.css
@@ -1,43 +1,50 @@
+/*
+ *  Styles for content of pages
+ */
+
+/* Font */
 @font-face {
     font-family:Roboto regular;
     src: url("../media/fonts/Roboto/Roboto-regular.ttf");
 }
-
+/* Remove unnecessary margin */
 * {
     margin: 0;
 }
+/* Remove text decoration from links... */
 a {
     text-decoration: none;
 }
+/* ... and marks from unordered lists */
 ul {
     list-style: none;
 }
 
-
+/* Centering content of sections */
 .content {
     max-width: 950px;
     width: 100%;
     display: flex;
     justify-content: center;
 }
+/* Centering header content */
 header {
     display: flex;
     justify-content: center;
 }
+/* Making <main> a grid with a nice background picture */
 main {
     grid-row-start: 1;
     background-image: url("../media/page background.png");
     background-repeat: no-repeat;
     background-size: cover;
-
     height: 900px;
 }
-
-
-
+/* Bad margins */
 .main_banner_container {
     margin: 0 0 0 0;
 }
+/* Main banner is a circle in homepage */
 .main_banner {
     margin-top: 50px;
     margin-bottom: 50px;
@@ -49,9 +56,11 @@ main {
     line-height: 28px;
     font-size: 22px;
 }
+/* Paragraph wasn't in the circle so i put it in */
 .main_banner > p {
     width: 450px;
 }
+/* Big red button saying "Get started!" */
 .main_banner_button {
     width: 240px;
     height: 60px;
@@ -59,6 +68,7 @@ main {
     border-radius: 30px;
     font-size: 20px;
 }
+/* Some animation for button */
 .main_banner_button:hover {
     cursor: pointer;
 }
@@ -67,9 +77,10 @@ main {
     color: rgba(255, 13, 0, 1);
 }
 
+/* Contains form */
 .main_form_container {
-
 }
+/* Directly form */
 .main_form {
     margin: 20px 0 20px 0;
     padding: 40px;
@@ -81,14 +92,17 @@ main {
     flex-direction: column;
     justify-content: space-around;
 }
+/* Form's field */
 .main_form_item {
     list-style: none;
     font-size: 28px;
     display: flex;
     justify-content: center;
 }
+/* Field's container */
 .main_form_fields {
 }
+/* Select that differs from inputs because of size */
 .form_select {
     margin: 10px 0 0 0;
     padding: 0 0 0 20px;
@@ -97,6 +111,7 @@ main {
     border: 3px solid #57AB60;
     border-radius: 30px;
 }
+/* Round inputs */
 .form_input {
     margin: 10px 0 0 0;
     padding: 0 0 0 20px;
@@ -105,6 +120,7 @@ main {
     border: 3px solid #57AB60;
     border-radius: 30px;
 }
+/* Button for editing... */
 .edit_button {
     background: none;
     border: none;
@@ -112,6 +128,7 @@ main {
     width: 28px;
     height: 28px;
 }
+/* ...and animation for it */
 .edit_button:active {
     transition: 0.1s;
     border: 2px solid #287730;
@@ -120,9 +137,7 @@ main {
     margin: 0 0 20px 0;
 }
 
-
-
-/* flexbox variants */
+/* flexbox classes just like bootstrap's! */
 .align-center {
     align-items: center;
 }
@@ -152,8 +167,7 @@ main {
     display: flex;
     justify-content: space-between;
 }
-/* flexbox variants */
-
+/* flexbox classes */
 
 /* background color styles */
 .background_green {
@@ -167,7 +181,6 @@ main {
 }
 /* background color styles */
 
-
 /* text color styles */
 .text_black {
     color: black;
@@ -180,7 +193,6 @@ main {
 }
 /* text color styles */
 
-
 /* font styles */
 .roboto-regular {
     font-family: Roboto regular, serif;
@@ -191,13 +203,13 @@ main {
 }
 /* font styles */
 
-/*  */
+/* Media for big screens */
 @media (min-width: 1920px) {
     .hamburger_container {
         display: none;
     }
 }
-/*  */
+
 /* laptops ( 1280 px - 768 px ) */
 @media (max-width: 1280px) and (min-width: 769px) {
 
@@ -211,7 +223,6 @@ main {
         background: #287730;
     }
 }
-/*  */
 
 /* tablets ( 768 px - 720 px ) */
 @media (max-width: 768px) and (min-width: 720px) {
@@ -235,7 +246,6 @@ main {
         padding: 12px;
     }
 }
-/*  */
 
 /* small tablets and phones */
 @media (max-width: 720px) and (min-width: 320px) {
@@ -282,4 +292,3 @@ main {
         display: block!important;
     }
 }
-/*  */
