--- a/styles/style.css
+++ b/styles/style.css
@@ -238,7 +238,7 @@ main {
         justify-content: space-between!important;
     }
     main {
-        max-height: 680px;
+        max-height: 860px;
     }
     .header {
         background: #287730;
@@ -251,18 +251,25 @@ main {
 /* small tablets and phones */
 @media (max-width: 720px) and (min-width: 320px) {
 
-    .flex-column-center {
-        height: 100%;
+    .main_form_item {
+        margin: 0 0 30px 0;
+    }
+    .main_registration_container {
+        margin: 0 0 0 0;
     }
     .main_form {
         padding: 12px;
         z-index: 1;
-        max-height: 630px;
-        border-radius: 0;
-        width: 400px;
+        max-height: 720px;
+        border-radius: 10px;
+        border: none;
+        width: 270px;
     }
     .form_select {
-        max-width: 360px;
+        max-width: 276px;
+    }
+    .form_input {
+        width: 250px;
     }
     .form_input, .form_select {
         font-size: 14pt;
