--- a/styles/authorization_media.css
+++ b/styles/authorization_media.css
@@ -5,7 +5,7 @@
 @media (max-width: 720px) and (min-width: 320px) {
     main {
         display: block!important;
-        max-height: 720px;
+        height: 100vh;
     }
     .content {
         margin-top: 100px;
