--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,7 @@ main {
 }
 /* Select that differs from inputs because of size */
 .form_select {
+    font-size: 16px;
     margin: 10px 0 0 0;
     padding: 0 0 0 20px;
     width: 360px;
@@ -112,8 +113,19 @@ main {
     border: 3px solid #57AB60;
     border-radius: 30px;
 }
+/* Textarea styles, not resizable */
+.form_text {
+    margin-top: 10px;
+    padding: 0 0 0 20px;
+    width: 334px;
+    border: 3px solid #57AB60;
+    border-radius: 16px;
+    font-size: 16px;
+    resize: none;
+}
 /* Round inputs */
 .form_input {
+    font-size: 16px;
     margin: 10px 0 0 0;
     padding: 0 0 0 20px;
     width: 334px;
@@ -274,11 +286,14 @@ main {
     .form_select {
         max-width: 276px;
     }
+    .form_text {
+        width: 250px;
+    }
     .form_input {
         width: 250px;
     }
-    .form_input, .form_select {
-        font-size: 14pt;
+    .form_input, .form_select, .form_text {
+        font-size: 12pt;
     }
     .main {
         height: 900px!important;
