--- a/styles/modal.css
+++ b/styles/modal.css
@@ -14,16 +14,25 @@
     height: 100%; /* Full height */
     overflow: auto;
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
 }
 
 /* Modal Content */
 .modal-content {
-    background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
     width: 80%;
+}
+.modal_links {
+    padding: 0;
+}
+.modal_links > li {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.modal_link:active {
+    color: #aaaaaa;
+    transition: 0.1s;
 }
 
 /* The Close Button */
